--- a/chandler/parcels/osaf/calendar/AboutCalendar.html
+++ b/chandler/parcels/osaf/calendar/AboutCalendar.html
@@ -3,26 +3,69 @@
 <TITLE>About Calendar</TITLE>
 </HEAD>
 <BODY>
+
 <H1>About Calendar</H1>
 The calendar parcel is one of the core, fundamental parcels of Chandler.  
+
+<H2>How to Add an Event</H2>
+To add an event to the calendar, click on the location of the starting 
+time/date.  Hold the mouse button down while you drag to the ending time
+from the start time, then release the button.  
+<!-- @@@ The arrow in the first picture is ugly!--->
+<TABLE BORDER=0>
+<TD><IMG SRC="CreateEventStart.jpg"></TD>
+<TD>Clicking and dragging your cursor from 11 AM to 2 PM (as shown at left) gives you an event starting at 11 AM and ending at 2 PM (as shown at right).</TD>
+<TD><IMG SRC="CreateEventEnd.jpg"</TD>
+</TABLE>
 <P>
-To add an event to the calendar, simply drag from the start time
-to the end time.  To add a description to an event, first click in the center
-of the event, then type the description.  To change the duration of an 
-event, drag the bottom of the event to the new end time.
+
+(Currently, there can
+be a several second delay the first time you create an event.  We are
+working on fixing that bug.)
+
+
+<A NAME="#description"></A>
+<H2>How to Add a Description</H2>
+
+To add a description to an event: 
+<UL>
+<LI>click in the center of the event to select the event,
+<LI>click again to enter description mode, then
+<LI>type the description.  
+</UL>
 <P>
-You can also move and copy events to a new location.  In Chandler for Windows, 
+
+<A NAME="#move"></A>
+<H2>How to Move and Copy an Event</H2>
+
+You can also move and copy events to a new time and date.  
+<A NAME="#windowsMove"></A>
+<H3>Moving Events under Windows</H3>
+In Chandler for Windows, 
 drag and drop the event to move it and Control-drag to copy it. 
 <P>
+<A NAME="#macOsMove"></A>
+<H3>Moving Events under Mac OS X</H3>
 On the Mac, currently you can drag and drop to copy, but there
 is a known bug that there isn't a way to move an event.  We plan
 on changing this to a simple drag and drop for moves; we haven't
 decided what we will do (if anything) for copies.
 <P>
+<A NAME="#linuxMove"></A>
+<H3>Moving Events under Linux</H3>
 In Chandler for Linux, drag and drop the event to copy it and shift-drag 
 it to move it.  (This is behavior that we inherited from our UI toolkit;
 we're currently evaluating whether or not to change this behavior.)
 <P>
+
+<H2>How to Change the Time</H2>
+To change the ending time of an event,
+drag the bottom of the event to the new end time.
+<P>
+To change the starting time, move the event to its new starting time (as 
+discussed above).
+<P>
+<H2>Future Work</H2>
 The calendar is still under very active development.  
 More features are coming soon!
 
