Added note that most users won't find this parcel very interesting.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@1143 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/repositoryviewer/AboutRepositoryViewer.html
+++ b/chandler/parcels/osaf/repositoryviewer/AboutRepositoryViewer.html
@@ -6,7 +6,8 @@
 
 <H1>About Repository Viewer</H1>
 The Repository Viewer parcel is designed to help developers debug their
-data schema and Repository code.
+data schema and Repository code.  This parcel probably won't be very 
+interesting to end-users.
 <P>
 Users can expand and collapse elements in the <B>Containment Path</B> column
 to see more or fewer levels of hierarchy.  
