Fixed typo, removed comment.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@1144 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/calendar/AboutCalendar.html
+++ b/chandler/parcels/osaf/calendar/AboutCalendar.html
@@ -11,7 +11,7 @@ The calendar parcel is one of the core, fundamental parcels of Chandler.
 To add an event to the calendar, click on the location of the starting 
 time/date.  Hold the mouse button down while you drag to the ending time
 from the start time, then release the button.  
-<!-- @@@ The arrow in the first picture is ugly!--->
+
 <TABLE BORDER=0>
 <TD><IMG SRC="CreateEventStart.jpg"></TD>
 <TD>Clicking and dragging your cursor from 11 AM to 2 PM (as shown at left) gives you an event starting at 11 AM and ending at 2 PM (as shown at right).</TD>
@@ -58,7 +58,7 @@ it to move it.  (This is behavior that we inherited from our UI toolkit;
 we're currently evaluating whether or not to change this behavior.)
 <P>
 
-<H2>How to Change the Time</H2>
+<H2>How to Change the Start and End Times</H2>
 To change the ending time of an event,
 drag the bottom of the event to the new end time.
 <P>
