Added link to tutorial.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@1157 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/MrMenus/AboutMrMenus.html
+++ b/chandler/parcels/osaf/MrMenus/AboutMrMenus.html
@@ -9,10 +9,10 @@ MrMenus is a sample parcel that shows programmers how your parcel's own
 menus and menu items can be incorporated into Chandler's menu structure. 
 It consists of a very simple user interface that includes a parcel menu, 
 and custom menu items inserted in Chandler menus. MrMenus is only a 
-demonstration for programmers -- it doesn't provide any actual 
+demonstration for programmers designed
+to go along with a <A HREF="http://wiki.osafoundation.org/bin/view/Main/MrMenusTutorial">MrMenus</A> tutorial -- it doesn't provide any actual 
 functionality for users.
 <P>
-A tutorial for MrMenus is coming soon!
 <P>
 </BODY>
 </HTML>
