Put in a note that linux binaries are only supported for RedHat 8.0 and newer. Other platforms may have to build from source.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@1615 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/distrib/release.index.html
+++ b/chandler/distrib/release.index.html
@@ -35,7 +35,7 @@ There are a few different types of Chandler distribution files that are availabl
 <ul>
 <li> <b>End-users' distributions: </b> If you just want to use Chandler, this distribution contains everything you need -- just download, unpack, and run!
 <b>Please select one of the following:</b>
-<a href=#enduserlinux>Linux</a> (RedHat only - other linux versions, please build from source) | 
+<a href=#enduserlinux>Linux</a> (RedHat 8.0 and newer only - other linux versions, please build from source) | 
 <a href=#enduserosx>Mac OSX</a> | 
 <a href=#enduserwin>Windows</a>
 <br>
@@ -43,7 +43,7 @@ There are a few different types of Chandler distribution files that are availabl
 <br>
 <li> <b>Developers' distributions: </b> If you're a developer and want to run Chandler in debugging mode, this distribution contains debug versions of the binaries.  You can also use this distribution to develop your own parcels (see <a href=http://wiki.osafoundation.org/bin/view/Main/ParcelLoading>ParcelLoading</a> for details on loading your own parcels).
 <b>Please select one of the following:</b>
-<a href=#devbinlinux>Linux</a> (RedHat only - other linux versions, please build from source) | 
+<a href=#devbinlinux>Linux</a> (RedHat 8.0 and newer only - other linux versions, please build from source) | 
 <a href=#devbinosx>Mac OSX</a> | 
 <a href=#devbinwin>Windows</a>
 <br>
