Added another note and fixed a typo.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@1616 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/distrib/release.index.html
+++ b/chandler/distrib/release.index.html
@@ -66,6 +66,9 @@ There are a few different types of Chandler distribution files that are availabl
 <a name=enduserlinux></a> &nbsp; <br>
 <h2>End-Users' Distribution: <i>Linux</i></h2>
 
+<p>Note: This binary is built for RedHat 8.0 or newer.  Other platforms may
+have to build from source.</p>
+
 Download <a href=Chandler_linux_XYZZY.tar.gz>Chandler_linux_XYZZY.tar.gz</a>
 to a directory on your computer.  Change your shell's current directory to the directory you copied the file to, and unpack the distribution by typing the following:
 
@@ -124,13 +127,16 @@ explorer, double-click on chandler.exe in the directory you extracted to.
 <a name=devbinlinux></a> &nbsp; <br>
 <h2>Developers' Distribution: <i>Linux</i></h2>
 
+<p>Note: This binary is built for RedHat 8.0 or newer.  Other platforms may
+have to build from source.</p>
+
 Download <a href=Chandler_linux_debug_XYZZY.tar.gz>Chandler_linux_debug_XYZZY.tar.gz</a> and save it to disk.  Change your shell's current directory to the location you saved the file and unpack the distribution via:
 
 <pre>   tar zxf Chandler_linux_debug_XYZZY.tar.gz</pre>
 
 This will create a Chandler_linux_debug_XYZZY subdirectory.  Cd into that directory:
 
-<pre>   cd Chandler_linux__debug_XYZZY</pre>
+<pre>   cd Chandler_linux_debug_XYZZY</pre>
 
 Run Chandler:
 
