Changed the first line
git-svn-id: http://svn.osafoundation.org/chandler/trunk@1973 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/welcome.html
+++ b/chandler/application/welcome.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-<h2><a name="INTRODUCTION_A_"> </a> INTRODUCTION</A> </h2>
+<h2><a name="INTRODUCTION_A_"> </a>Welcome to Chandler</A> </h2>
 <p />
 <p />
 <h3><a name="What_is_0_3_"> What is 0.3? </a></h3>
