Bug 1461, updated links due to CVS structure change. Also, in the future, we should upgrade these links to the release's CVS tag when we do a release.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2523 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/welcome.html
+++ b/chandler/application/welcome.html
@@ -10,7 +10,7 @@
 <p />
 The two biggest architecture advancements in this release are the <B>Chandler Presentation and Interaction Architecture (CPIA)</B> and the <B>Repository</B>. This release marks the debut of CPIA, which is a UI layer in our architecture that is uniquely adapted for item-centric applications based on our repository. Not only does it abstract away implementation-specific UI widgets, but CPIA elements have direct access to our repository via data-driven queries.  In 0.3, our repository now implements a transaction and threading model, and is a lot more robust and scalable. 
 <p />
-You can find a comprehensive (but terse) listing of all the changes in 0.3 in <a href="http://cvs.osafoundation.org/index.cgi/osaf/chandler/Chandler/HISTORY.txt?rev=1.13&amp;content-type=text/vnd.viewcvs-markup" target="_top">HISTORY.txt</a>.
+You can find a comprehensive (but terse) listing of all the changes in 0.3 in <a href="http://cvs.osafoundation.org/index.cgi/chandler/HISTORY.txt?rev=CHANDLER_0_3_16&content-type=text/vnd.viewcvs-markup" target="_top">HISTORY.txt</a>.
 <p />
 <h3><a name="0_3_High_level_Deliverables"> 0.3 High-level Deliverables </a></h3>
 <p />
@@ -273,7 +273,7 @@ Chandler 0.3 Copyright (c) 2002-2004 Open Source Applications Foundation
 The 0.3 version of Chandler is available under the GNU General Public License,
 version 2, as described in
 <ul>
-<li> <a href="http://cvs.osafoundation.org/index.cgi/osaf/chandler/Chandler/LICENSE.txt?rev=1.1&amp;content-type=text/vnd.viewcvs-markup" target="_top">LICENSE.txt</a>
+<li> <a href="http://cvs.osafoundation.org/index.cgi/chandler/LICENSE.txt?rev=CHANDLER_0_3_16&content-type=text/vnd.viewcvs-markup" target="_top">LICENSE.txt</a>
 </li>
 </ul>
 <p />
