Since viewcvs upgrade, we don't have index.cgi anymore.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2622 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/welcome.html
+++ b/chandler/application/welcome.html
@@ -273,7 +273,7 @@ Chandler 0.3 Copyright (c) 2002-2004 Open Source Applications Foundation
 The 0.3 version of Chandler is available under the GNU General Public License,
 version 2, as described in
 <ul>
-<li> <a href="http://cvs.osafoundation.org/index.cgi/chandler/LICENSE.txt?rev=CHANDLER_0_3_17&content-type=text/vnd.viewcvs-markup" target="_top">LICENSE.txt</a>
+<li> <a href="http://cvs.osafoundation.org/viewcvs.cgi/chandler/LICENSE.txt?rev=CHANDLER_0_3_17&content-type=text/vnd.viewcvs-markup" target="_top">LICENSE.txt</a>
 </li>
 </ul>
 <p />
