Update to check commit logic
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2946 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/welcome.html
+++ b/chandler/application/welcome.html
@@ -199,7 +199,7 @@ These are the known bugs in the 0.3 release as of the release date.
 <ul>
 <li> There are a few bugs in 0.3 related to hangs.  These might all be different manifestations of the same bug:
 <ul>
-<li> Quitting on the Mac is problematic.  You might need to force-quit. (<a href="http://bugzilla.osafoundation.org/show_bug.cgi?id=1278" target="_top">Bug#1278</a>)
+<li> <a href="http://bugzilla.osafoundation.org/show_bug.cgi?id=1278" target="_top">Bug#1278 - Quitting on the Mac is working now.  </a>
 </li>
 <li> Chandler can hang if you quit very quickly after you launch Chandler.  (<a href="http://bugzilla.osafoundation.org/show_bug.cgi?id=1296" target="_top">Bug#1296</a>)
 </li>
