--- a/chandler/distrib/release.index.html
+++ b/chandler/distrib/release.index.html
@@ -65,6 +65,10 @@ There are a few different types of Chandler distribution files that are availabl
 <br>
 <li> <b>Source code distribution: </b> If you want to compile everything yourself, including the Python interpreter and all required libraries, this download contains the entire source tree. <b>A gzip'd tar file of this plugh is available </b><a href=Chandler_src_XYZZY.tar.gz>here</a> (if using Mac OSX, please unpack the file with gnutar instead of tar), and instructions for building Chandler are in the "osaf/hardhat/README.txt" within that tar file.  Also see our <a href=http://wiki.osafoundation.org/twiki/bin/view/Chandler/BuildingChandler>instructions for building Chandler</a> online.
 <br>
+&nbsp;
+<br>
+<li> <b>List of all downloads: </b> A listing of all downloadable files from this milestone (and their check-sums in MD5 and SHA-1) is available <a href=XYZZY_index.html> <b>here</b></a>.
+<br>
 </ul>
 
 <br>
