Bug 365, adding credits section that points to ChandlerContributors wiki page.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3465 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/welcome.html
+++ b/chandler/application/welcome.html
@@ -176,6 +176,9 @@ We also have a <a href="http://wiki.osafoundation.org/twiki/bin/view/Chandler/He
 we could use some help with.
 <p />
 <hr />
+<h2>CREDITS</h2>
+<p><a href="http://wiki.osafoundation.org/bin/view/Chandler/ChandlerContributors">Chandler contributors</a>.</p>
+<hr />
 <A NAME="more"></A>
 <h2><a name="FURTHER_INFORMATION"> </a> FURTHER INFORMATION </h2>
 For more information, please see documentation on our wiki at:
