--- a/chandler/application/welcome.html
+++ b/chandler/application/welcome.html
@@ -7,6 +7,8 @@
 <body>
 <h2><a name="INTRODUCTION_A_"> </a>Welcome to Chandler</h2>
 
+<!-- Do not change this line. @@buildid@@ -->
+
 <h3><a name="What_is_0_3_"> What is 0.3? </a></h3>
 <p>0.3 is the last of our architecture-focused releases as described in our <a href="http://wiki.osafoundation.org/twiki/bin/view/Chandler/ProductRoadmap">ProductRoadmap</a>. It is not intended for end-users but rather targets developers who want an early preview into our architecture as we are developing it. Our architecture will continue to evolve, but starting with 0.3, we are finally able to start developing end-user features.
 </p>
