Adding crypto export blurb.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3818 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/distrib/release.index.html
+++ b/chandler/distrib/release.index.html
@@ -43,7 +43,16 @@ Chandler</a>.
 </ul>
 
 <h2>What Should I Download?</h2>
-There are a few different types of Chandler distribution files that are available in this plugh; choose the one that's right for you:
+
+<p>This software is subject to the U.S. Export Administration Regulations and
+other U.S. law, and may not be exported or re-exported to certain countries
+(currently Cuba, Iran, Libya, North Korea, Sudan and Syria) or to persons or
+entities prohibited from receiving U.S. exports (including Denied Parties,
+Specially Designated Nationals, and entities on the Bureau of Industry and
+Security Entity List or involved with missile technology or nuclear, chemical
+or biological weapons).</p>
+
+<p>There are a few different types of Chandler distribution files that are available in this plugh; choose the one that's right for you:</p>
 <ul>
 <li> <b>End-users' distributions: </b> If you just want to use Chandler, this distribution contains everything you need -- just download, unpack, and run!
 <b>Please select one of the following:</b>
