New wording post 0.4.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3852 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/distrib/release.index.html
+++ b/chandler/distrib/release.index.html
@@ -20,10 +20,7 @@ Thank you for your interest in the XYZZY plugh of Chandler.
 We hope that this plugh of Chandler will give you a flavor of Chandler's architecture and APIs, and a glimse of what Chandler will do in the future.
 </p>
 <p>
-Please note that Chandler is still in its extremely early stages, with only a very limited set of capabilities.  Please read the <a href=http://wiki.osafoundation.org/twiki/bin/view/Chandler/ChandlerZeroPointThreeReadme>README</a> -- it has information on known bugs, our future plans, volunteering, and where to go for futher documentation.
-</p>
-<p>
-Please also understand that our underlying database is undergoing massive changes at the moment.  What we're using now will not be what we use in the future. This means that <font color=red>you should not store important information in Chandler</font> yet.
+Please note that Chandler is still in its extremely early stages, with only a very limited set of capabilities.  <font color=red>You should not store important information in Chandler</font>.  Please read the <a href=http://wiki.osafoundation.org/twiki/bin/view/Chandler/ChandlerZeroPointFourReadme>README</a> -- it has information on known bugs, our future plans, volunteering, and where to go for futher documentation.
 </p>
 
 <p>
@@ -62,7 +59,7 @@ or biological weapons).</p>
 <br>
 &nbsp;
 <br>
-<li> <b>Developers' distributions: </b> If you're a developer and want to run Chandler in debugging mode, this distribution contains debug versions of the binaries.  You can also use this distribution to develop your own parcels (see <a href=http://wiki.osafoundation.org/bin/view/Main/ParcelLoading>ParcelLoading</a> for details on loading your own parcels).
+<li> <b>Developers' distributions: </b> If you're a developer and want to run Chandler in debugging mode, this distribution contains debug versions of the binaries.  You can also use this distribution to develop your own parcels (see <a href=http://wiki.osafoundation.org/bin/view/Chandler/ParcelLoading>ParcelLoading</a> for details on loading your own parcels).
 <b>Please select one of the following:</b>
 <a href=#devbinlinux>Linux</a> | 
 <a href=#devbinosx>Mac OSX</a> | 
@@ -119,8 +116,12 @@ Run Chandler:
 <a name=enduserosx></a> &nbsp; <br>
 <h2>End-Users' Distribution: <i>Mac OSX</i></h2>
 
-Download <a href=Chandler_osx_XYZZY.dmg>Chandler_osx_XYZZY.dmg</a> to your desktop, double-click it, and it will unpack the Chandler application.
-
+<p>Download <a href=Chandler_osx_XYZZY.dmg>Chandler_osx_XYZZY.dmg</a> to your desktop, double-click it, and it will unpack the Chandler application.
+Drag the Chandler application
+icon to your desktop or somewhere else on your filesystem.
+Next, double-click the Chandler application icon.  (If you try to doubleclick
+on the Chandler icon without copying it from the .dmg disk image, Chandler
+will give you a cryptic error.)</p>
 
 
 
@@ -178,7 +179,12 @@ Run Chandler:
 <a name=devbinosx></a> &nbsp; <br>
 <h2>Developers' Distribution: <i>Mac OSX</i></h2>
 
-Download <a href=Chandler_osx_debug_XYZZY.dmg>Chandler_osx_debug_XYZZY.dmg</a> to your desktop, double-click it, and it will unpack the Chandler application.
+<p>Download <a href=Chandler_osx_debug_XYZZY.dmg>Chandler_osx_debug_XYZZY.dmg</a> to your desktop, double-click it, and it will unpack the Chandler application.
+Drag the Chandler application
+icon to your desktop or somewhere else on your filesystem.
+Next, double-click the Chandler application icon.  (If you try to doubleclick
+on the Chandler icon without copying it from the .dmg disk image, Chandler
+will give you a cryptic error.)</p>
 
 <br>
 <img src=http://www.osafoundation.org/images/spacer.gif width=1 height=1000> 
