Changed two URLs to make shorter, give Pieter more flexibility.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3859 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/application/welcome.html
+++ b/chandler/application/welcome.html
@@ -13,10 +13,10 @@
 <ul>
 <li><a href="http://wiki.osafoundation.org/bin/view/Chandler/WhatIsZeroPointFour">What's New</a></li>
 <li><a href="http://wiki.osafoundation.org/bin/view/Chandler/ZeroPointFourPreferences">Setting Preferences</a></li>
-<li><a href="http://wiki.osafoundation.org/bin/view/Chandler/ZeroPointFourGuidedTour">Guided Tour</a></li>
+<li><a href="http://www.osafoundation.org/0.4/GuidedTour.htm">Guided Tour</a></li>
 <li><a href="http://wiki.osafoundation.org/bin/view/Chandler/ZeroPointFourKnownMajorBugs">Known Major Bugs</a></li>
 <li><a href="http://wiki.osafoundation.org/bin/view/Chandler/ReportingBugs">How to report a bug</a></li>
-<li><a href="http://osafoundation.org/Chandler_0.1_license_terms.htm">Licensing terms</a></li>
+<li><a href="http://osafoundation.org/Chandler_0.1-0.4_license_terms.htm">Licensing terms</a></li>
 <li><a href="http://wiki.osafoundation.org/bin/view/Chandler/ChandlerZeroPointFourReadme#How_to_get_involved">Getting involved</a></li>
 <li><a href="http://wiki.osafoundation.org/bin/view/Chandler/ChandlerZeroPointFourReadme#Further_information">Where to go for help</a></li>
 <li><a href="http://wiki.osafoundation.org/bin/view/Chandler/ChandlerContributors">Credits</a></li>
